--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,3 @@
-
-
 <html>
   <head>
     <title>
@@ -60,5 +58,6 @@
         </div>
       </div>
     </footer>
+    <div id="notifications" class="fixed top-4 right-4 z-50 space-y-2 max-w-md"></div>
   </body>
 </html>
