--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
   </head>
   <body>
     <%= render 'shared/navigation' %>
-
+    <div>
+      <%= render "shared/flash" %>
+    </div>
     <% if notice.present? %>
     <div>
       <p>
