--- a/app/views/compliments/_form.html.erb
+++ b/app/views/compliments/_form.html.erb
@@ -31,10 +31,17 @@
     { class: "w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500" } %>
   </div>
   <div>
-    <%= form.label :category_id, "Message Type", class: "block text-sm font-medium text-gray-700 mb-1" %>
-    <%= form.collection_select :category_id, Category.where(system: true).order(:name), :id, :name,
+    <%= form.label :category_id, "Category" %>
+    <% if form.object.community_id.present? %>
+    <% community = Community.find(form.object.community_id) %>
+    <% available_categories = Category.where(system: true).or(Category.where(id: community.category_ids)) %>
+    <% else %>
+    <% available_categories = Category.where(system: true) %>
+    <% end %>
+
+    <%= form.collection_select :category_id, available_categories.order(:name), :id, :name,
     { prompt: "Select a category" },
-    { class: "w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500" } %>
+    { class: "form-select" } %>
     <p>
       Choose the type of message you'd like to send.
 
