--- a/app/views/compliments/index.html.erb
+++ b/app/views/compliments/index.html.erb
@@ -6,13 +6,15 @@
     </h1>
     <%= link_to "Send a Compliment", new_compliment_path, class: "btn-primary" %>
   </div>
+  <% if current_user %>
+
   <div>
     <div class="bg-white rounded-lg shadow p-6">
       <h2>
-        Compliments Received (<%= @compliments.count %>)
+        Compliments Received (<%= @compliments&.count || 0 %>)
 
       </h2>
-      <% if @compliments.any? %>
+      <% if @compliments&.any? %>
       <div id="received_compliments" class="space-y-4">
         <% @compliments.each do |compliment| %>
         <%= render partial: "compliments/compliment_card", locals: { compliment: compliment, received: true } %>
@@ -27,10 +29,10 @@
     </div>
     <div>
       <h2>
-        Compliments Sent (<%= @sent_compliments.count %>)
+        Compliments Sent (<%= @sent_compliments&.count || 0 %>)
 
       </h2>
-      <% if @sent_compliments.any? %>
+      <% if @sent_compliments&.any? %>
       <div id="sent_compliments" class="space-y-4">
         <% @sent_compliments.each do |compliment| %>
         <%= render partial: "compliments/compliment_card", locals: { compliment: compliment, received: false } %>
@@ -44,4 +46,13 @@
       <% end %>
     </div>
   </div>
+  <% else %>
+
+  <div>
+    <p>
+      You need to be signed in to view your compliments. Please <%= link_to "sign in", new_user_session_path, class: "underline" %> to continue.
+    </p>
+  </div>
+  <% end %>
+
 </div>
